tokped-sniper/bot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot
  namespace: tokped-sniper
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: bot
  template:
    metadata:
      labels:
        app: bot
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: bot
              topologyKey: kubernetes.io/hostname
      containers:
        - name: bot
          image: ghcr.io/slickerius/tokped-sniper:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: ghcr-secret
